[package]
name = "mundi_staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mundi_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# pyth-solana-receiver-sdk = "0.4.0"
anchor-spl = "0.29.0"
solana-security-txt = "1.1.1"
# solana-account-info = "2.1.7"
# solana-program = "2.1.7"